@@ -1,3 +1,8 @@
+Tue Dec  3 22:18:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (rb_hash): detect recursion for all `hash' methods.  each
+	  `hash' methods no longer need to use rb_exec_recursive().
+
 Tue Dec  3 21:53:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_eval.c (rb_catch_protect): new function similar to
